# clockwise

./: .gitignore  .gitmodules  CMakeLists.txt  CoreTrack.pro  README.md  Setup.bat
Source/: App.pri  CMakeLists.txt  Clockwise.pro  CoreTrack.pro  Dependencies.pri  main.cpp
Source/Core/: Core.pri
Source/Core/DTO/: DTO.pri  FeatureContainer.h  SettingsBase.h  SettingsFeatureTracker.h
Source/Core/DescriptorExtractor/: DescriptorExtractor.pri  SIFTDescriptorExtractor.cpp  SIFTDescriptorExtractor.h
Source/Core/FeatureDetection/: CornerHarrisDetector.cpp  CornerHarrisDetector.h  DetectorManager.cpp  DetectorManager.h  FeatureDetection.pri  ORBDetector.cpp  ORBDetector.h  SIFTDetector.cpp  SIFTDetector.h  ShiTomasidetector.cpp  ShiTomasidetector.h
Source/Core/FeatureMatching/: FLANNMatcher.cpp  FLANNMatcher.h  FeatureMatching.pri
Source/Core/FeatureTracking/: CSRTTracker.cpp  CSRTTracker.h  FeatureTracking.pri  KLTFeatureTracker.cpp  KLTFeatureTracker.h
Source/Core/Image/: Image.pri  ImageContainer.cpp  ImageContainer.h  ImageConverter.hpp  ImageLoader.hpp  ImageUtils.hpp
Source/Core/Reconstruction/: Reconstruction.pri  SFMReconstruction.cpp  SFMReconstruction.h
Source/DTO/: DMatchContainer.h  FeatureContainer.h  SIFTDescriptorContainer.h  SettingsBase.h
Source/DescriptorExtractor/: SIFTDescriptorExtractor.cpp  SIFTDescriptorExtractor.h
Source/FeatureDetection/: CornerHarrisDetector.cpp  CornerHarrisDetector.h  DetectorManager.cpp  DetectorManager.h  ORBDetector.cpp  ORBDetector.h  SIFTDetector.cpp  SIFTDetector.h  ShiTomasidetector.cpp  ShiTomasidetector.h
Source/FeatureMatching/: AKAZEMatcher.cpp  AKAZEMatcher.h  FLANNMatcher.cpp  FLANNMatcher.h
Source/FeatureTracking/: KLTFeatureTracker.cpp  KLTFeatureTracker.h
Source/Image/: ImageContainer.cpp  ImageContainer.h  ImageConverter.hpp  ImageLoader.cpp  ImageLoader.h  ImageLoader.hpp  ImageUtils.hpp
Source/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Source/UI/: UI.pri
(+28 files in other folders)
